adding projectname back 🙈

--- a/src/app/components/single-project/single-project.component.html
+++ b/src/app/components/single-project/single-project.component.html
@@ -31,6 +31,9 @@
 
     <app-single-project-row label="Aantal / omschrijving" field="houseAmount" type="input">
     </app-single-project-row>
+
+    <app-single-project-row label="Referentie" field="projectName" type="input">
+    </app-single-project-row>
   </div>
 
   <div class="projectSection">
