--- a/src/app/components/single-project-comments/single-project-comments.component.html
+++ b/src/app/components/single-project-comments/single-project-comments.component.html
@@ -1,4 +1,4 @@
-  <form [formGroup]="singleProjectCommentsService.commentForm" class="wrapper noBorder" (ngSubmit)="singleProjectCommentsService.onSubmit()">
+<form [formGroup]="singleProjectCommentsService.commentForm" class="wrapper noBorder" (ngSubmit)="singleProjectCommentsService.onSubmit()" *ngIf="!singleProjectService.archiveActive">
   <div class="inputGroup">
     <textarea name="content" id="content" formControlName="content" rows="3"></textarea>
   </div>
