--- a/src/assets/sass/_forms.scss
+++ b/src/assets/sass/_forms.scss
@@ -140,3 +140,15 @@ textarea {
     justify-content: flex-end;
     flex-grow: 1;
 }
+
+.fieldChanged {
+    .read {
+        color: lightgreen;
+        font-weight: bold;
+
+        .oldField {
+            color: red;
+            text-decoration: line-through;
+        }
+    }
+}
