--- a/src/app/components/single-project-comments/single-project-comments.component.html
+++ b/src/app/components/single-project-comments/single-project-comments.component.html
@@ -15,7 +15,7 @@
 <div class="list comments">
   <div class="comment" *ngFor="let comment of singleProjectCommentsService.comments | reverse">
     <div class="user">{{comment.user | user | async}}</div>
-    <div class="modifiedDateTime">{{comment.modifiedDateTime | date}} <span *ngIf="commentModified(comment)">*</span></div>
+    <div class="modifiedDateTime">{{comment.modifiedDateTime | formatDate }} <span *ngIf="commentModified(comment)">*</span></div>
     <div class="content" [innerHTML]="formService.newlineToBr(comment.content)"></div>
     <div class="icon edit" *ngIf="auth.getUserDetails().id == comment.user || auth.isAdmin()" (click)="singleProjectCommentsService.editComment(comment)"><img src="assets/images/icon-edit.svg" alt=""></div>
     <div class="icon delete" *ngIf="auth.getUserDetails().id == comment.user || auth.isAdmin()" (click)="singleProjectCommentsService.removeComment(comment)"><img src="assets/images/icon-delete.svg" alt=""></div>
