Add a back button in the archive view

--- a/src/app/components/single-project-archive/single-project-archive.component.scss
+++ b/src/app/components/single-project-archive/single-project-archive.component.scss
@@ -8,11 +8,17 @@
     padding-right: 15px;
     padding-left: 15px;
 
+    .arrows {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 10px;
+    }
+
     .icon {
         width: 20px;
-        cursor: pointer;
         
         img {
+            cursor: pointer;
             width: 100%;
         }
     }
