--- a/src/app/components/single-project-archive/single-project-archive.component.html
+++ b/src/app/components/single-project-archive/single-project-archive.component.html
@@ -1,11 +1,14 @@
 <div class="wrapper">
     <div class="controls">
-        <div (click)="singleProjectArchiveService.olderProject()" class="icon"><img *ngIf="singleProjectArchiveService.isOlderProjectAvailable()" src="/assets/images/icon-arrow-prev.svg" alt=""></div>
+        <div class="icon goBack" [routerLink]="[ '/project', singleProjectService.projectId ]"><img src="/assets/images/icon-back.svg" alt=""></div>
         <div class="info" *ngIf="singleProjectArchiveService.archiveProjectData">
             <div class="date">Opgeslagen op: {{ singleProjectArchiveService.archiveProjectData.savedDateTime | formatDate: 'time' }}</div>
             <div class="user">Opgeslagen door: {{ singleProjectArchiveService.archiveProjectData.user | user | async }}</div>
         </div>
-        <div (click)="singleProjectArchiveService.newerProject()" class="icon"><img *ngIf="singleProjectArchiveService.isNewerProjectAvailable()" src="/assets/images/icon-arrow-next.svg" alt=""></div>
+        <div class="arrows">
+            <div (click)="singleProjectArchiveService.olderProject()" class="icon"><img *ngIf="singleProjectArchiveService.isOlderProjectAvailable()" src="/assets/images/icon-arrow-prev.svg" alt=""></div>
+            <div (click)="singleProjectArchiveService.newerProject()" class="icon"><img *ngIf="singleProjectArchiveService.isNewerProjectAvailable()" src="/assets/images/icon-arrow-next.svg" alt=""></div>
+        </div>
     </div>
 </div>
 
