--- a/src/app/components/single-project-comments/single-project-comments.component.html
+++ b/src/app/components/single-project-comments/single-project-comments.component.html
@@ -17,7 +17,7 @@
     <div class="user">{{comment.user | user | async}}</div>
     <div class="modifiedDateTime">{{comment.modifiedDateTime | formatDate: 'time' }} <span *ngIf="commentModified(comment)">*</span></div>
     <div class="content" [innerHTML]="formService.newlineToBr(comment.content)"></div>
-    <div class="icon edit" *ngIf="auth.getUserDetails().id == comment.user || auth.isAdmin()" (click)="singleProjectCommentsService.editComment(comment)"><img src="assets/images/icon-edit.svg" alt=""></div>
-    <div class="icon delete" *ngIf="auth.getUserDetails().id == comment.user || auth.isAdmin()" (click)="singleProjectCommentsService.removeComment(comment)"><img src="assets/images/icon-delete.svg" alt=""></div>
+    <div class="icon edit" *ngIf="(auth.getUserDetails().id == comment.user || auth.isAdmin()) && !singleProjectService.archiveActive" (click)="singleProjectCommentsService.editComment(comment)"><img src="assets/images/icon-edit.svg" alt=""></div>
+    <div class="icon delete" *ngIf="(auth.getUserDetails().id == comment.user || auth.isAdmin()) && !singleProjectService.archiveActive" (click)="singleProjectCommentsService.removeComment(comment)"><img src="assets/images/icon-delete.svg" alt=""></div>
   </div>
 </div>
