--- a/src/app/components/single-project-archive/single-project-archive.component.html
+++ b/src/app/components/single-project-archive/single-project-archive.component.html
@@ -1,4 +1,5 @@
 <div class="wrapper">
+    <h1>Historiek</h1>
     <div class="controls">
             <div class="icon goBack" (click)="goBack()"><img src="/assets/images/icon-back.svg" alt=""></div>
         <div class="info" *ngIf="singleProjectArchiveService.archiveProjectData">
