--- a/src/app/components/single-project-archive/single-project-archive.component.scss
+++ b/src/app/components/single-project-archive/single-project-archive.component.scss
@@ -1,5 +1,10 @@
 @import "forms";
 
+h1 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
 .controls {
     display: flex;
     justify-content: space-between;
