--- a/src/app/components/single-project/single-project.component.html
+++ b/src/app/components/single-project/single-project.component.html
@@ -3,7 +3,7 @@
       <div class="projectRow space-between">
         <app-single-project-controls [projectForm]="singleProjectService.projectForm" [projectId]="singleProjectService.projectId" class="left controls" *ngIf="!singleProjectService.archiveActive"></app-single-project-controls>
         <div class="right">
-          <app-single-project-row label="Contactpersoon binnen" field="company" type="select" [dataSource]="companyService.companies" valueKey="_id" [readOnly]="!auth.isAdmin()">
+          <app-single-project-row label="Contactpersoon binnen" field="company" type="select" [dataSource]="companyService.getCompanies() | async" valueKey="_id" [readOnly]="!auth.isAdmin()">
           </app-single-project-row>
 
           <app-single-project-row label=":" field="EpbReporter" type="select" [dataSource]="userService.users | filterUsers:singleProjectService.projectForm.value.company" valueKey="_id">
