--- a/src/app/components/single-project-row/single-project-row.component.html
+++ b/src/app/components/single-project-row/single-project-row.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="singleProjectService.projectForm">
     <div class="projectRow" [class]="[type, field]">
-        <label [for]="field"><span [innerHTML]='label'></span>&nbsp;<span *ngIf="singleProjectService.projectForm.controls[field].validator !== null">*</span></label>
+        <label [for]="field"><span [innerHTML]='label'></span>&nbsp;<span *ngIf="singleProjectService.projectForm.controls[field].validator !== null && showAsterisk">*</span></label>
         <div class="inputField" [class.fieldChanged]="singleProjectArchiveService.fieldChanged(field)">
             <div class="read" (click)="changeEditState(field, true)" [ngClass]="{'empty': isEmpty(field)}"
                 *ngIf="!singleProjectService.projectEditStates[field] || readOnly || singleProjectService.archiveActive">
