hide comments for now, since it's not linked with the archive yet

--- a/src/app/components/single-project/single-project.component.html
+++ b/src/app/components/single-project/single-project.component.html
@@ -108,7 +108,7 @@
   </div>
   
 
-  <div class="projectSection">
+  <div class="projectSection" *ngIf="!singleProjectService.archiveActive">
     <div class="projectRow">
       <h2>Opmerkingen</h2>
     </div>
