clean unused classes

--- a/src/app/components/prices/prices.component.html
+++ b/src/app/components/prices/prices.component.html
@@ -82,9 +82,9 @@
   
   <h2>Meergezinswoningen</h2>
   
-  <table class="tableizer-table">
+  <table>
     <thead>
-      <tr class="tableizer-firstrow">
+      <tr>
         <th></th>
         <th>Forfait per fase</th>
         <th>Per test</th>
@@ -112,9 +112,9 @@
   
   <h2>Andere (kantoren/WZC/scholen/openbare gebouwen, ....)</h2>
   
-  <table class="tableizer-table">
+  <table>
     <thead>
-      <tr class="tableizer-firstrow">
+      <tr>
         <th>Van</th>
         <th>Tot</th>
         <th>Forfait</th>
