--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -371,6 +371,30 @@
     }
 }
 
+.batchmode {
+    border: 1px solid $infiltro-border-grey;
+    padding: 15px;
+
+    h2 {
+        margin-bottom: 15px;
+    }
+    
+    ul {
+        li {
+            margin-left: 15px;
+        }
+    }
+
+    .projectRow {
+        padding: 15px 0;
+    }
+
+    .buttons {
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
 @media only screen and (max-width: 600px) {
     .controls {
         .filter {
