--- a/src/app/components/single-project/single-project.component.html
+++ b/src/app/components/single-project/single-project.component.html
@@ -3,15 +3,15 @@
       <div class="projectRow space-between">
         <app-single-project-controls [projectForm]="singleProjectService.projectForm" [projectId]="singleProjectService.projectId" class="left controls" *ngIf="!singleProjectService.archiveActive"></app-single-project-controls>
         <div class="right">
-          <app-single-project-row label="Contactpersoon binnen" field="company" type="select" [dataSource]="companyService.getCompanies() | async" valueKey="_id" [readOnly]="!auth.isAdmin()">
+          <app-single-project-row label="Contactpersoon binnen" field="company" type="select" firstValue="Selecteer bedrijf" [dataSource]="companyService.getCompanies() | async" valueKey="_id" [readOnly]="!auth.isAdmin()">
           </app-single-project-row>
 
-          <app-single-project-row label=":" field="EpbReporter" type="select" [dataSource]="userService.getUsers() | async | filterUsers:singleProjectService.projectForm.value.company" valueKey="_id" [showAsterisk]="false">
+          <app-single-project-row label=":" field="EpbReporter" type="select" firstValue="Selecteer EPB verslaggever" [dataSource]="userService.getUsers() | async | filterUsers:singleProjectService.projectForm.value.company" valueKey="_id" [showAsterisk]="false">
           </app-single-project-row>
         </div>
       </div>
       <div class="right">
-        <app-single-project-row label="Status" field="status" type="select" [dataSource]="projectService.statuses" valueKey="type">
+        <app-single-project-row label="Status" field="status" type="select" firstValue="Selecteer status" [dataSource]="projectService.statuses" valueKey="type">
         </app-single-project-row>
       </div>
   </div>
@@ -26,7 +26,7 @@
       </div>
     </div>
 
-    <app-single-project-row label="Type" field="projectType" type="select" [dataSource]="projectService.projectTypes" valueKey="type">
+    <app-single-project-row label="Type" field="projectType" type="select" firstValue="Selecteer type" [dataSource]="projectService.projectTypes" valueKey="type">
     </app-single-project-row>
 
     <app-single-project-row label="Aantal / omschrijving" field="houseAmount" type="input">
@@ -94,7 +94,7 @@
       <h2>Uitvoergegevens</h2>
     </div>
 
-    <app-single-project-row label="Uitvoerder" field="executor" type="select" [dataSource]="projectService.executors" valueKey="type" [readOnly]="!auth.isAdmin()">
+    <app-single-project-row label="Uitvoerder" field="executor" type="select" firstValue="Selecteer uitvoerder" [dataSource]="projectService.executors" valueKey="type" [readOnly]="!auth.isAdmin()">
     </app-single-project-row>
 
     <app-single-project-row label="Datum ingepland" field="datePlanned" type="date" [readOnly]="!auth.isAdmin() || singleProjectService.hasCalendarItem" (click)="calendarWarning(singleProjectService.hasCalendarItem)">
@@ -103,7 +103,7 @@
     <app-single-project-row label="Uur ingepland" field="hourPlanned" type="time" [readOnly]="!auth.isAdmin() || singleProjectService.hasCalendarItem" (click)="calendarWarning(singleProjectService.hasCalendarItem)">
     </app-single-project-row>
 
-    <app-single-project-row label="Status" field="status" type="select" [dataSource]="projectService.statuses" valueKey="type">
+    <app-single-project-row label="Status" field="status" type="select" firstValue="Selecteer status" [dataSource]="projectService.statuses" valueKey="type">
     </app-single-project-row>
   </div>
   
