--- a/src/app/components/single-project-controls/single-project-controls.component.html
+++ b/src/app/components/single-project-controls/single-project-controls.component.html
@@ -3,4 +3,4 @@
 <div *ngIf="projectId" (click)="removeProject()"><img src="/assets/images/icon-delete.svg" alt=""></div>
 <div (click)="openProjectMail()"><img src="/assets/images/icon-mail.svg" alt=""></div>
 <div *ngIf="auth.isAdmin()" (click)="duplicateProject()"><img src="/assets/images/icon-duplicate.svg" alt=""></div>
-<div *ngIf="singleProjectService.newProject && auth.isAdmin()" [routerLink]="[ 'archief' ]"><img src="/assets/images/icon-archive.svg" alt=""></div>
+<div *ngIf="!singleProjectService.newProject && auth.isAdmin()" [routerLink]="[ 'archief' ]"><img src="/assets/images/icon-archive.svg" alt=""></div>
