--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -140,13 +140,7 @@
                         <img src="/assets/images/icon-comment.svg" alt="" (mouseenter)="showComment(project._id)" (mouseleave)="hideComment()"
                             (click)="showComment(project._id)">
                         <div class="hoverComment" *ngIf="currentHoverComment === project._id">
-                            <div class="list comments">
-                                <div class="comment" *ngFor="let comment of project.comments | reverse">
-                                    <div class="user">{{comment.user | user | async}}</div>
-                                    <div class="modifiedDateTime">{{comment.modifiedDateTime | formatDate: 'time'}}</div>
-                                    <div class="content" [innerHTML]="comment.content | newlineToBr"></div>
-                                </div>
-                            </div>
+                            <app-comments [comments]="project.comments"></app-comments>
                         </div>
                     </div>
                 </ng-container>
