--- a/src/app/components/single-project-comments/single-project-comments.component.html
+++ b/src/app/components/single-project-comments/single-project-comments.component.html
@@ -12,12 +12,4 @@
     </ng-template>
   </div>
 </form>
-<div class="list comments">
-  <div class="comment" *ngFor="let comment of singleProjectCommentsService.comments | reverse">
-    <div class="user">{{comment.user | user | async}}</div>
-    <div class="modifiedDateTime">{{comment.modifiedDateTime | formatDate: 'time' }} <span *ngIf="commentModified(comment)">*</span></div>
-    <div class="content" [innerHTML]="comment.content | newlineToBr"></div>
-    <div class="icon edit" *ngIf="(auth.getUserDetails().id == comment.user || auth.isAdmin()) && !singleProjectService.archiveActive" (click)="singleProjectCommentsService.editComment(comment)"><img src="assets/images/icon-edit.svg" alt=""></div>
-    <div class="icon delete" *ngIf="(auth.getUserDetails().id == comment.user || auth.isAdmin()) && !singleProjectService.archiveActive" (click)="singleProjectCommentsService.removeComment(comment)"><img src="assets/images/icon-delete.svg" alt=""></div>
-  </div>
-</div>
+<app-comments [comments]="singleProjectCommentsService.comments" [readOnly]="singleProjectService.archiveActive"></app-comments>
