--- a/src/assets/sass/_forms.scss
+++ b/src/assets/sass/_forms.scss
@@ -145,6 +145,7 @@ textarea {
 
 .fieldChanged {
     .read {
+        color: $infiltro-green;
 
         .oldField {
             color: $infiltro-red;
