--- a/src/app/components/single-project-controls/single-project-controls.component.html
+++ b/src/app/components/single-project-controls/single-project-controls.component.html
@@ -2,5 +2,5 @@
 <div (click)="onSubmit()"><img [src]="projectForm.touched ? '/assets/images/icon-save.svg' : '/assets/images/icon-save-disabled.svg'" alt=""></div>
 <div *ngIf="projectId" (click)="removeProject()"><img src="/assets/images/icon-delete.svg" alt=""></div>
 <div (click)="openProjectMail()"><img src="/assets/images/icon-mail.svg" alt=""></div>
-<div *ngIf="auth.isAdmin()" (click)="duplicateProject()"><img src="/assets/images/icon-duplicate.svg" alt=""></div>
+<div (click)="duplicateProject()"><img src="/assets/images/icon-duplicate.svg" alt=""></div>
 <div *ngIf="!singleProjectService.newProject && auth.isAdmin()" [routerLink]="[ 'archief' ]"><img src="/assets/images/icon-archive.svg" alt=""></div>
